@@ -1,5 +1,5 @@
 <h1>WMI Query</h1>
 
 Any valid WQL query. According to Microsoft, the WMI Query Language (WQL) is a subset of standard American National Standards Institute Structured Query Language (ANSI SQL) with minor semantic changes to support WMI.
-<br><br>
+<br /><br />
 Example: SELECT LoadPercentage from Win32_Processor WHERE DeviceID = "CPU0"
