@@ -1,0 +1,26 @@
+<h1>Tipo de módulo</h1>
+
+La siguiente lista describe los tipos de módulos:
+<ul>
+	<li>async_data: Datos numéricos asíncronos</li>
+	<li>async_inc: Datos incrementales asíncronos</li>
+	<li>async_proc: Datos asíncronos booleanos</li>
+	<li>async_string: Datos asíncronos tipo cadena</li>
+	<li>generic_data: Módulo genérico para adquirir datos numéricos</li>
+	<li>generic_data_inc: Módulo genérico para adquirir datos numéricos incrementales</li>
+	<li>generic_data_string: Módulo genérico para adquirir datos alfanuméricos</li>
+	<li>generic_proc: Módulo genérico para adquirir datos booleanos</li>
+	<li>image_jpg: Imagen JPG</li>
+	<li>image_png: Imagen PNG</li>
+	<li>keep_alive: KeepAlive</li>
+	<li>remote_icmp: Agente de red remoto ICMP (latencia)</li>
+	<li>remote_icmp_proc: Agente de red remoto ICMP, datos booleanos</li>
+	<li>remote_snmp: Agente de red remoto SNMP, datos numéricos</li>
+	<li>remote_snmp_inc: Agente de red remoto SNMP, datos incrementales</li>
+	<li>remote_snmp_proc: Agente de red remoto SNMP, datos booleanos</li>
+	<li>remote_snmp_string: Agente de red remoto SNMP, datos alfanuméricos</li>
+	<li>remote_tcp: Agente de red remoto TCP, datos numéricos</li>
+	<li>remote_tcp_inc: Agente de red remoto TCP, incremental data</li>
+	<li>remote_tcp_proc: Agente de red remoto TCP, datos booleanos</li>
+	<li>remote_tcp_string: Agente de red remoto TCP, datos alfanuméricos</li>
+</ul>
