@@ -1,0 +1,12 @@
+<h1>Parámetros del complemento</h1>
+
+Este campo hace referencia a todos los parámetros que se le pueden pasar al complemento y no están definidos en el formularo, a diferencia de «Puerto», «Contraseña», «Máx. tiempo de expiraciónMáx. tiempo de expiración», ...
+<br /><br />
+Éstos parámetros pueden ser:
+<ul>
+	<li>Un URL</li>
+	<li>Una ruta</li>
+	<li>Un fichero</li>
+	<li>Etc.</li>
+</ul>
+Este campo es opcional y depende completamente del complemento.
