@@ -1,0 +1,3 @@
+<h1>Comunidad SNMP</h1>
+
+Comunidad necesaria parra monitorizar un OID SNMP. 
