@@ -1,0 +1,3 @@
+<h1>Texto clave</h1>
+
+Opcional. Espacio de nombres (<i>namespace</i>) WMI. Si no está seguro, déjelo en blanco.
